[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Vragen/Background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Answer_Button_Unpressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/Answer_Button_Pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/Answer_Button_Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixelated Font Large.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Pixelated Font Normal.tres" type="DynamicFont" id=6]
[ext_resource path="res://Vragen Scenes/Scripts/Scale Question.gd" type="Script" id=7]
[ext_resource path="res://Assets/Vragen/Red Cross.png" type="Texture" id=8]
[ext_resource path="res://Assets/Vragen/Green Check.png" type="Texture" id=9]
[ext_resource path="res://Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://GlobalTimeLeft.gd" type="Script" id=11]
[ext_resource path="res://Timer.gd" type="Script" id=12]
[ext_resource path="res://Assets/Vragen/dageraadpaard.png" type="Texture" id=13]
[ext_resource path="res://Assets/Vragen/Vraag 3 Ruler.jpg" type="Texture" id=14]
[ext_resource path="res://Assets/Book Spritesheet.png" type="Texture" id=15]
[ext_resource path="res://Assets/Pixelated Font Small.tres" type="DynamicFont" id=16]
[ext_resource path="res://Questions Answered.gd" type="Script" id=17]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 15 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 15 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 15 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 15 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 15 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 15 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "Correct"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Incorrect"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.75, 0.75 ), Vector2( 0.75, 0.75 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Time Left" type="Label" parent="CanvasLayer"]
margin_right = 100.0
margin_bottom = 20.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/Time Left"]
wait_time = 2700.0
autostart = true
script = ExtResource( 12 )

[node name="Questions Answered" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -111.0
margin_top = 37.0
margin_right = -71.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 16 )
text = "0/40"
align = 2
valign = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animated Sprite" type="AnimatedSprite" parent="CanvasLayer/Questions Answered"]
position = Vector2( 75, -3 )
frames = SubResource( 14 )
frame = 8
playing = true

[node name="Player" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 512, 300 )

[node name="Control" type="Control" parent="."]
margin_left = 6.0
margin_top = 150.0
margin_right = 46.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vraag" type="Label" parent="Control"]
margin_left = 6.0
margin_top = -140.0
margin_right = 1006.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 5 )
text = "Hoe groot is het dageraad paardje?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="TextureButton" parent="Control"]
margin_left = 810.0
margin_top = 372.0
margin_right = 1810.0
margin_bottom = 512.0
rect_scale = Vector2( 0.2, 0.471179 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="Control/Confirm"]
margin_right = 200.0
margin_bottom = 46.0
rect_scale = Vector2( 5, 3 )
custom_fonts/font = ExtResource( 6 )
text = "Confirm"
align = 1
valign = 1

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
z_index = -1
texture = ExtResource( 1 )

[node name="Ruler" type="Sprite" parent="."]
position = Vector2( 34.9998, 339 )
scale = Vector2( 0.423806, 0.392788 )
texture = ExtResource( 14 )

[node name="Foto" type="Sprite" parent="."]
position = Vector2( 58, 575 )
z_index = -1
texture = ExtResource( 13 )
offset = Vector2( 95, -62 )

[node name="Result" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Result"]
anims/Correct = SubResource( 1 )
anims/Incorrect = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Control/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="animation_finished" from="Result/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
